# hydra

./: .coveragerc  .gitignore  Hydra.drawio  README.md  Untitled Diagram.drawio  manage_project.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_unit.sh  tox.ini
.github/: release.yml  test.yml
.github/workflows/: release.yml  test.yml
design-docs/: Hydra.drawio
hydra/: __init__.py  __main__.py  config.py  settings.py  settings.toml.orign
hydra/cli/: main.py
hydra/commands/: framework.py
hydra/commands/adapters/: config_adapter.py
hydra/modules/: environment.py  project.py  versionctl.py
tests/: conftest.py
tests/system/: test_cli.py
tests/unit/: test_cli.py  test_config_adapter.py  test_environment.py  test_framework.py  test_project.py
